XXX: Add column batch type and scan op.

--- a/experimental/iterators/lib/Conversion/IteratorsToLLVM/CMakeLists.txt
+++ b/experimental/iterators/lib/Conversion/IteratorsToLLVM/CMakeLists.txt
@@ -8,7 +8,9 @@ add_mlir_conversion_library(MLIRIteratorsToLLVM
   LINK_LIBS PUBLIC
   IteratorsUtils
   MLIRFuncDialect
+  MLIRFuncTransforms
   MLIRIterators
+  MLIRLLVMCommonConversion
   MLIRLLVMDialect
   MLIRPass
   MLIRSCFDialect
